--- a/Ellevo.mobile.app/Ellevo.mobile.app.Droid/packages.config
+++ b/Ellevo.mobile.app/Ellevo.mobile.app.Droid/packages.config
@@ -3,7 +3,9 @@
   <package id="Microsoft.Azure.Mobile" version="0.5.0" targetFramework="monoandroid60" />
   <package id="Microsoft.Azure.Mobile.Analytics" version="0.5.0" targetFramework="monoandroid60" />
   <package id="Microsoft.Azure.Mobile.Crashes" version="0.5.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid60" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
