--- a/Ellevo.mobile.app/Ellevo.mobile.app.WinPhone/Ellevo.mobile.app.WinPhone.csproj
+++ b/Ellevo.mobile.app/Ellevo.mobile.app.WinPhone/Ellevo.mobile.app.WinPhone.csproj
@@ -102,6 +102,7 @@
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
+    <Content Include="fundosemlogo.png" />
     <Content Include="logomobile150x15001.png" />
   </ItemGroup>
   <ItemGroup>
