--- a/Ellevo.mobile.app/Ellevo.mobile.app/Ellevo.mobile.app.csproj
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/Ellevo.mobile.app.csproj
@@ -38,32 +38,37 @@
     <Compile Include="App.cs" />
     <Compile Include="ImageResourceExtension.cs" />
     <Compile Include="objects\Acompanhamento.cs" />
+    <Compile Include="objects\ApiReader.cs" />
     <Compile Include="objects\Atividade.cs" />
     <Compile Include="objects\Chamado.cs" />
     <Compile Include="objects\Conta.cs" />
     <Compile Include="objects\Instrucao.cs" />
+    <Compile Include="objects\InstrucaoDestinatario.cs" />
     <Compile Include="objects\Providencia.cs" />
     <Compile Include="objects\Tarefa.cs" />
     <Compile Include="objects\Tramite.cs" />
-    <Compile Include="pages\ListaAcompanhamentos.xaml.cs">
+    <Compile Include="pages\InstrucaoDetalhe.xaml.cs">
+      <DependentUpon>InstrucaoDetalhe.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="pages\lists\ListaAcompanhamentos.xaml.cs">
       <DependentUpon>ListaAcompanhamentos.xaml</DependentUpon>
     </Compile>
-    <Compile Include="pages\ListaAprovacoes.xaml.cs">
+    <Compile Include="pages\lists\ListaAprovacoes.xaml.cs">
       <DependentUpon>ListaAprovacoes.xaml</DependentUpon>
     </Compile>
-    <Compile Include="pages\ListaChamados.xaml.cs">
+    <Compile Include="pages\lists\ListaChamados.xaml.cs">
       <DependentUpon>ListaChamados.xaml</DependentUpon>
     </Compile>
-    <Compile Include="pages\ListaInstrucoes.xaml.cs">
+    <Compile Include="pages\lists\ListaInstrucoes.xaml.cs">
       <DependentUpon>ListaInstrucoes.xaml</DependentUpon>
     </Compile>
-    <Compile Include="pages\ListaProvidencias.xaml.cs">
+    <Compile Include="pages\lists\ListaProvidencias.xaml.cs">
       <DependentUpon>ListaProvidencias.xaml</DependentUpon>
     </Compile>
-    <Compile Include="pages\ListaTarefas.xaml.cs">
+    <Compile Include="pages\lists\ListaTarefas.xaml.cs">
       <DependentUpon>ListaTarefas.xaml</DependentUpon>
     </Compile>
-    <Compile Include="pages\ListaTramites.xaml.cs">
+    <Compile Include="pages\lists\ListaTramites.xaml.cs">
       <DependentUpon>ListaTramites.xaml</DependentUpon>
     </Compile>
     <Compile Include="pages\LoginPage.xaml.cs">
@@ -85,7 +90,7 @@
     <Compile Include="pages\Springboard.xaml.cs">
       <DependentUpon>Springboard.xaml</DependentUpon>
     </Compile>
-    <Compile Include="pages\SwitchboardButton.xaml.cs">
+    <Compile Include="controls\SwitchboardButton.xaml.cs">
       <DependentUpon>SwitchboardButton.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -153,43 +158,43 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="pages\ListaInstrucoes.xaml">
+    <EmbeddedResource Include="pages\lists\ListaInstrucoes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="pages\ListaAcompanhamentos.xaml">
+    <EmbeddedResource Include="pages\lists\ListaAcompanhamentos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="pages\ListaChamados.xaml">
+    <EmbeddedResource Include="pages\lists\ListaChamados.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="pages\ListaTramites.xaml">
+    <EmbeddedResource Include="pages\lists\ListaTramites.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="pages\ListaTarefas.xaml">
+    <EmbeddedResource Include="pages\lists\ListaTarefas.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="pages\ListaProvidencias.xaml">
+    <EmbeddedResource Include="pages\lists\ListaProvidencias.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="pages\ListaAprovacoes.xaml">
+    <EmbeddedResource Include="pages\lists\ListaAprovacoes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -201,12 +206,17 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="pages\SwitchboardButton.xaml">
+    <EmbeddedResource Include="controls\SwitchboardButton.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="pages\InstrucaoDetalhe.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.3.180\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.3.180\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
