--- a/Ellevo.mobile.app/Ellevo.mobile.app.WinPhone/Ellevo.mobile.app.WinPhone.csproj
+++ b/Ellevo.mobile.app/Ellevo.mobile.app.WinPhone/Ellevo.mobile.app.WinPhone.csproj
@@ -96,14 +96,20 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="adicionar.png" />
     <Content Include="Assets\Logo.scale-240.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
+    <Content Include="book250.png" />
+    <Content Include="doc150.png" />
     <Content Include="fundosemlogo.png" />
+    <Content Include="fundosemlogoH1024.png" />
+    <Content Include="lido.png" />
     <Content Include="logomobile150x150.png" />
+    <Content Include="remover.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
