--- a/Ellevo.mobile.app/Ellevo.mobile.app/Ellevo.mobile.app.csproj
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/Ellevo.mobile.app.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="controles\BindablePicker.cs" />
     <Compile Include="ImageResourceExtension.cs" />
     <Compile Include="modelos\Acompanhamento.cs" />
     <Compile Include="modelos\ApiWriter.cs" />
